# nthlayer-bench

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  release-please-config.json  renovate.json
.github/: dependabot.yml
.github/workflows/: dependabot-automerge.yml  release-please.yml  release.yml  test.yml
docs/: architecture.md
src/nthlayer_bench/: __init__.py  app.py  cli.py
src/nthlayer_bench/screens/: __init__.py  case_bench.py  case_detail.py  case_review.py  situation_board.py
src/nthlayer_bench/sre/: __init__.py  brief.py  case_bench.py  escalation.py  post_incident.py  reasoning_capture.py  situation_board.py  write_queue.py
src/nthlayer_bench/widgets/: __init__.py  case_bench.py  case_brief.py  case_review.py  reasoning_capture.py  situation_board.py
tests/: conftest.py  test_app.py  test_cli.py  test_screens_case_bench.py  test_screens_case_detail.py  test_screens_case_review.py  test_screens_situation_board.py  test_sre_brief.py  test_sre_case_bench.py  test_sre_escalation.py  test_sre_post_incident.py  test_sre_reasoning_capture.py  test_sre_situation_board.py  test_sre_write_queue.py  test_widgets_case_bench.py  test_widgets_case_brief.py  test_widgets_case_review.py  test_widgets_reasoning_capture.py  test_widgets_situation_board.py
tests/smoke/: test_cli.py  test_imports.py
