[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nthlayer-bench"
version = "1.5.0a1"
description = "NthLayer Bench — Tier 3 operator TUI for case management and situation awareness"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nthlayer-common>=0.1.8",
    "textual>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.8",
]

[project.scripts]
nthlayer-bench = "nthlayer_bench.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.uv.sources]
nthlayer-common = { path = "../nthlayer-common", editable = true }
